# inspirehep-mcp

./: .coverage  .gitignore  README.md  pyproject.toml
src/inspirehep_mcp/: __init__.py  api_client.py  cache.py  config.py  errors.py  server.py  tools.py  utils.py
tests/: test_cache.py  test_config.py  test_errors.py  test_tools_integration.py  test_utils.py
