[project]
name = "inspirehep-mcp"
version = "0.1.0"
description = "MCP server for InspireHEP - integrate high-energy physics literature resources with LLMs"
readme = "README.md"
authors = [
    { name = "MohamedElashri", email = "mail@elashri.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
inspirehep-mcp = "inspirehep_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
